<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity"
    android:background="@drawable/matilogo">

    <LinearLayout
        android:id="@+id/mainLoginLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkBlue"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="350dp"
            android:layout_height="168dp"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            app:srcCompat="@drawable/logonowe" />

        <EditText
            android:id="@+id/login_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_screen"
            android:drawableLeft="@drawable/username2"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText

            android:id="@+id/login_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/login_screen"
            android:padding="10dp"
            android:drawableLeft="@drawable/passwordicon"
            android:drawablePadding="5dp"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:hint="Hasło"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textStyle="bold"
            app:passwordToggleEnabled="true"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginRight="8dp"
            android:fontFamily="sans-serif-medium"
            android:text="Zapomniałeś hasła?"
            android:clickable="true"
            android:focusable="true"
            android:textSize="15sp"
            android:textColor="@drawable/login_buttons_color"
            android:layout_marginTop="5dp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp">

            <Button
                android:id="@+id/login_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/sign_button_1"
                android:text="Zaloguj się"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/no_account_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:focusable="false"
                    android:inputType="textPersonName"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/white"
                    android:text="Nie masz jeszcze konta?"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="Kliknij tutaj"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@drawable/login_buttons_color"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="250dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>
